Add IBM profile to set javaModuleArgs correctly
Removes `WARNING: package com.ibm.lang.management.internal not in
jdk.management` warning during the build.