@@ -174,7 +174,6 @@
         <vmHeapSettings>-Xms512m -Xmx2G</vmHeapSettings>
         <!-- Java 9+ module system args to be appended during surefire/failsafe executions. -->
         <hazelcast.module.name>ALL-UNNAMED</hazelcast.module.name>
-        <javaModuleArgs/>
 
         <!-- needed for CheckStyle -->
         <checkstyle.version>8.38</checkstyle.version>
@@ -204,6 +203,8 @@
            open java.base/java.lang
         TimedMemberStateFactoryHelper:
            open java.management/sun.management
+
+        NOTE: There is a slightly different setting for IBM OpenJ9, see the specific profile
         -->
         <javaModuleArgs>
             --add-exports java.base/jdk.internal.ref=${hazelcast.module.name}
@@ -211,7 +212,6 @@
             --add-opens java.base/sun.nio.ch=${hazelcast.module.name}
             --add-opens java.base/java.lang=${hazelcast.module.name}
             --add-opens java.management/sun.management=${hazelcast.module.name}
-            --add-exports jdk.management/com.ibm.lang.management.internal=${hazelcast.module.name}
             --illegal-access=deny
         </javaModuleArgs>
     </properties>
@@ -1515,6 +1515,26 @@
                 <maven.source.skip>true</maven.source.skip>
             </properties>
         </profile>
+        <profile>
+            <id>IBM</id>
+            <activation>
+                <property>
+                    <name>java.vendor</name>
+                    <value>IBM Corporation</value>
+                </property>
+            </activation>
+            <properties>
+                <javaModuleArgs>
+                    --add-exports java.base/jdk.internal.ref=${hazelcast.module.name}
+                    --add-opens jdk.management/com.sun.management.internal=${hazelcast.module.name}
+                    --add-opens java.base/sun.nio.ch=${hazelcast.module.name}
+                    --add-opens java.base/java.lang=${hazelcast.module.name}
+                    --add-opens java.management/sun.management=${hazelcast.module.name}
+                    --add-exports jdk.management/com.ibm.lang.management.internal=${hazelcast.module.name}
+                    --illegal-access=deny
+                </javaModuleArgs>
+            </properties>
+        </profile>
     </profiles>
 
     <distributionManagement>
@@ -1942,9 +1962,9 @@
                 <version>2.5.0</version>
             </dependency>
             <dependency>
-              <groupId>org.wildfly.openssl</groupId>
-              <artifactId>wildfly-openssl</artifactId>
-              <version>1.1.3.Final</version>
+                <groupId>org.wildfly.openssl</groupId>
+                <artifactId>wildfly-openssl</artifactId>
+                <version>1.1.3.Final</version>
             </dependency>
             <dependency>
                 <groupId>com.google.api-client</groupId>
